Spacing fix

--- a/css/landing.css
+++ b/css/landing.css
@@ -20,7 +20,6 @@
 h1 {
   font-size: 6vmin;
   font-weight: 900;
-  margin-top: 1.25rem;
   text-align: center;
 }
 
