--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,13 @@ body {
 h1 {
   text-align: center;
 }
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
